--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <form action="post" name="form" action="/info">
-        <div class="oustide-container">
+        <div id="outside-one" class="oustide-container">
             <div class="title-line">
                 <p>Price Simulation Publicity</p>
                 <figure>
